Bug 2266: Could not uncollapse a tag if you turn on advancedMARCeditor - Revised.
Added javascript and if/else logic to the addbiblio.tmpl and a corresponding anchor tag in CSS.
If advancedMARCeditor is on, the user now clicks on the tag number to expand the marc fields.
If advancedMARCeditor is off, no functionality has changed.  The user clicks on the marc tag's title to expand the marc fields.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/addbiblio.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/addbiblio.css
@@ -76,6 +76,14 @@ div.subfield_line label {
 	padding : .1em .3em .1em 0;
 }
 
+a.tagnum {
+	font-size : 110%;
+	font-weight : bold;
+	color : #000;
+	padding : .1em .3em .1em 0;
+	text-decoration : none;
+}
+
 .subfield {
 	color : #00698a;
 	float: left;
